<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/bg"
        android:src="@drawable/bg"
        android:contentDescription="@string/bg_desc"
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_alignParentLeft="true"
       	android:layout_alignParentTop="true"
        android:scaleType="center" />
    
    <TextView
        android:id="@+id/loginTxt_top"
        android:layout_width="150dp"
        android:layout_height="400dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/loginTxt_top"
        android:textSize="12sp" /> 

    <Button
        android:id="@+id/loginBtn"
        android:layout_below="@id/loginTxt_top"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="50dp" 
        android:text="@string/loginBtn" />
    
     <TextView
        android:id="@+id/loginTxt_btm"
        android:layout_below="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTxt_btm" />
    

</RelativeLayout>
